--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,23 @@
     'card card2 card3'
     'footer footer footer'
 }
+.bonus {
+    font-family:'ms gothic', monospace;
+    display: grid;
+    grid-gap: 10px;
+    background-color:lightslategrey;
+    color: midnightblue;
+    text-align: center;
+    border-radius: 5px;
+    font-size: 125%;
+
+    grid-template-columns: 300px 350px 300px;
+    grid-template-areas:
+    'header header header'
+    'para para para'
+    'iframe iframe iframe'
+    'footer footer footer'
+}
 .header {
     grid-area: header;
     padding: 10px;
@@ -57,6 +74,7 @@
 .pic {
     grid-area: pic;
     margin: 20px;
+    margin-top: 90px;
     margin-left: 10px;
     align-self: center;
     border-style: double;
@@ -67,7 +85,7 @@
     margin-top: 75px;
     margin-bottom: 75px;
     margin-left: 10px;
-    padding-top: 20%;
+    padding-top: 25%;
     color: midnightblue;
     background-color: snow;
     border-style:double;
@@ -112,6 +130,21 @@
     border-style:double;
     border-color: midnightblue;
     color:lightcyan;
+}
+.para {
+    grid-area: para;
+    margin: 20px;
+    margin-left: 10px;
+    padding: 10px;
+    color:snow;
+    background-color: midnightblue;
+    border-style:double;
+    border-color: snow;
+    font-size: 80%;
+}
+iframe {
+    grid-area: iframe;
+    align-self: center;
 }
 h5 {
     font-weight: bold;
